Fixed collasible navbar on mobile screens

--- a/css/main.css
+++ b/css/main.css
@@ -616,7 +616,7 @@ body {
 
 @media screen and (min-width: 1400px) {
   .testimonials {
-    height: 25rem;
+    height: 30rem;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -1471,7 +1471,7 @@ body {
 
 @media screen and (min-width: 1400px) {
   .testimonials {
-    height: 25rem;
+    height: 30rem;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
