--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -349,7 +349,7 @@
   align-items: center;
   
   @media screen and (min-width: 1400px) {
-      height: 25rem;
+      height: 30rem;
       flex-direction: row;
       flex-wrap: wrap;
     }
